src/modules/logger/objects/Log__c/Log__c.object-meta.xml
<CustomObject>
    <description>The custom object for storing debug information, errors, and integration request details. It allows administrators to capture and track critical data, facilitating efficient troubleshooting and analysis of system activities, errors, and external interactions within your Salesforce environment.</description>
    <label>Log</label>
    <nameField>
        <displayFormat>LOG-{00000000}</displayFormat>
        <label>Log Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>