src/modules/logger/objects/Log__c/fields/Context__c.field-meta.xml
<CustomField>
    <fullName>Context__c</fullName>
    <description>A generalized execution category for easier identification, consolidating detailed quiddities into broader types like Batch, Trigger, or Test.</description>
    <inlineHelpText>A generalized execution category for easier identification, consolidating detailed quiddities into broader types like Batch, Trigger, or Unit Test.</inlineHelpText>
    <label>Context</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ANONYMOUS</fullName>
                <label>Anonymous Apex</label>
            </value>
            <value>
                <fullName>API</fullName>
                <label>Integration</label>
            </value>
            <value>
                <fullName>BATCH</fullName>
                <label>Batch</label>
            </value>
            <value>
                <fullName>APEX_TRIGGER</fullName>
                <label>Trigger</label>
            </value>
            <value>
                <fullName>UI</fullName>
                <label>User Interface</label>
            </value>
            <value>
                <fullName>UNIT_TEST</fullName>
                <label>Unit Test</label>
            </value>
            <value>
                <fullName>OTHER</fullName>
                <label>Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>