src/modules/logger/objects/Log__c/fields/Debug_Data__c.field-meta.xml
<CustomField>
    <fullName>Debug_Data__c</fullName>
    <description>Data in JSON format passed to Logger</description>
    <inlineHelpText>Data in JSON format passed to Logger</inlineHelpText>
    <label>Debug Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>