src/modules/logger/objects/Log__c/fields/Execution_Context__c.field-meta.xml
<CustomField>
    <fullName>Execution_Context__c</fullName>
    <description>Identifies the context from which the Apex transaction was initiated (e.g., REST API, Quick Action, Unit Test, etc.).</description>
    <inlineHelpText>Identifies the context from which the Apex transaction was initiated (e.g., REST API, Quick Action, Unit Test, etc.), determined using Salesforce’s standard getQuiddity function.</inlineHelpText>
    <label>Apex Transaction Context / Quiddity</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ANONYMOUS</fullName>
                <label>Anonymous Apex</label>
            </value>
            <value>
                <fullName>AURA</fullName>
                <label>Aura Component</label>
            </value>
            <value>
                <fullName>BATCH_ACS</fullName>
                <label>Apex Batch (API Query Cursor)</label>
            </value>
            <value>
                <fullName>BATCH_APEX</fullName>
                <label>Apex Batch</label>
            </value>
            <value>
                <fullName>BATCH_CHUNK_PARALLEL</fullName>
                <label>Apex Batch (Parallel Execution)</label>
            </value>
            <value>
                <fullName>BATCH_CHUNK_SERIAL</fullName>
                <label>Apex Batch (Serial Execution)</label>
            </value>
            <value>
                <fullName>BULK_API</fullName>
                <label>Bulk API Request</label>
            </value>
            <value>
                <fullName>COMMERCE_INTEGRATION</fullName>
                <label>Apex Integration for B2B Commerce</label>
            </value>
            <value>
                <fullName>DISCOVERABLE_LOGIN</fullName>
                <label>Login Discoverable Login Page</label>
            </value>
            <value>
                <fullName>EXTERNAL_SERVICE_CALLBACK</fullName>
                <label>External Services Asynchronous Callback</label>
            </value>
            <value>
                <fullName>FUNCTION_CALLBACK</fullName>
                <label>Callback Function</label>
            </value>
            <value>
                <fullName>FUTURE</fullName>
                <label>Future Method</label>
            </value>
            <value>
                <fullName>INBOUND_EMAIL_SERVICE</fullName>
                <label>Inbound Email Service</label>
            </value>
            <value>
                <fullName>INVOCABLE_ACTION</fullName>
                <label>Invocable Action</label>
            </value>
            <value>
                <fullName>PLATFORM_EVENT_PUBLISH_CALLBACK</fullName>
                <label>Platform Event Publish Callback</label>
            </value>
            <value>
                <fullName>POST_INSTALL_SCRIPT</fullName>
                <label>Managed Package Install/Upgrade</label>
            </value>
            <value>
                <fullName>QUEUEABLE</fullName>
                <label>Queueable Operation</label>
            </value>
            <value>
                <fullName>TRANSACTION_FINALIZER_QUEUEABLE</fullName>
                <label>Queueable Operation (Transaction Finalizers)</label>
            </value>
            <value>
                <fullName>QUICK_ACTION</fullName>
                <label>Quick Action</label>
            </value>
            <value>
                <fullName>REMOTE_ACTION</fullName>
                <label>Remote Action</label>
            </value>
            <value>
                <fullName>REST</fullName>
                <label>REST API Request</label>
            </value>
            <value>
                <fullName>RUNTEST_ASYNC</fullName>
                <label>Unit Test (Asynchronous Execution)</label>
            </value>
            <value>
                <fullName>RUNTEST_DEPLOY</fullName>
                <label>Unit Test (Deployment Execution)</label>
            </value>
            <value>
                <fullName>RUNTEST_SYNC</fullName>
                <label>Unit Test (Synchronous Execution)</label>
            </value>
            <value>
                <fullName>SCHEDULED</fullName>
                <label>Scheduled Job</label>
            </value>
            <value>
                <fullName>SOAP</fullName>
                <label>SOAP API Request</label>
            </value>
            <value>
                <fullName>SYNCHRONOUS</fullName>
                <label>Synchronous Operation</label>
            </value>
            <value>
                <fullName>VF</fullName>
                <label>Visualforce Page</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>