src/modules/logger/objects/Log__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <description>Indicates the severity or importance of the logged event, helping to categorize and prioritize logs</description>
    <inlineHelpText>Indicates the severity or importance of the logged event, helping to categorize and prioritize logs</inlineHelpText>
    <label>Level</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10</fullName>
                <default>true</default>
                <label>DEBUG</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>INFO</label>
            </value>
            <value>
                <fullName>30</fullName>
                <label>WARNING</label>
            </value>
            <value>
                <fullName>40</fullName>
                <label>ERROR</label>
            </value>
            <value>
                <fullName>50</fullName>
                <label>CRITICAL</label>
            </value>
            <value>
                <fullName>60</fullName>
                <label>FATAL</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>