src/modules/logger/objects/Log__c/fields/Limit_Callouts__c.field-meta.xml
<CustomField>
    <fullName>Limit_Callouts__c</fullName>
    <description>The number of Web service statements that have been processed</description>
    <inlineHelpText>The number of Web service statements that have been processed</inlineHelpText>
    <label>Callouts</label>
    <length>255</length>
    <type>Text</type>
</CustomField>