src/modules/logger/objects/Log__c/fields/Limit_CPU_Time__c.field-meta.xml
<CustomField>
    <fullName>Limit_CPU_Time__c</fullName>
    <description>CPU time (in milliseconds) that has been used in the current transaction</description>
    <inlineHelpText>CPU time (in milliseconds) that has been used in the current transaction</inlineHelpText>
    <label>CPU Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>