src/modules/logger/objects/Log__c/fields/Quiddity__c.field-meta.xml
<CustomField>
    <fullName>Quiddity__c</fullName>
    <description>A detailed execution context indicator obtained via Request.getQuiddity(), providing precise information about context.</description>
    <inlineHelpText>A detailed execution context indicator obtained via Request.getQuiddity(), providing precise information about context.</inlineHelpText>
    <label>Transaction Quiddity</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ANONYMOUS</fullName>
                <label>Anonymous Apex Block (ANONYMOUS)</label>
            </value>
            <value>
                <fullName>AURA</fullName>
                <label>Aura Component (AURA)</label>
            </value>
            <value>
                <fullName>BATCH_ACS</fullName>
                <label>API Query Cursor driven batch Apex (BATCH_ACS)</label>
            </value>
            <value>
                <fullName>BATCH_APEX</fullName>
                <label>Batch Apex Job (BATCH_APEX)</label>
            </value>
            <value>
                <fullName>BATCH_CHUNK_PARALLEL</fullName>
                <label>Batch Apex Job running in parallel (BATCH_CHUNK_PARALLEL)</label>
            </value>
            <value>
                <fullName>BATCH_CHUNK_SERIAL</fullName>
                <label>Batch Apex Job running in serial (BATCH_CHUNK_SERIAL)</label>
            </value>
            <value>
                <fullName>BULK_API</fullName>
                <label>Bulk API Request (BULK_API)</label>
            </value>
            <value>
                <fullName>COMMERCE_INTEGRATION</fullName>
                <label>Apex Integration for B2B Commerce (COMMERCE_INTEGRATION)</label>
            </value>
            <value>
                <fullName>DISCOVERABLE_LOGIN</fullName>
                <label>Login Discoverable login page (DISCOVERABLE_LOGIN)</label>
            </value>
            <value>
                <fullName>EXTERNAL_SERVICE_CALLBACK</fullName>
                <label>External Services Asynchronous Callback (EXTERNAL_SERVICE_CALLBACK)</label>
            </value>
            <value>
                <fullName>FUNCTION_CALLBACK</fullName>
                <label>Callback Function (FUNCTION_CALLBACK)</label>
            </value>
            <value>
                <fullName>FUTURE</fullName>
                <label>Future Method (FUTURE)</label>
            </value>
            <value>
                <fullName>INBOUND_EMAIL_SERVICE</fullName>
                <label>Inbound Email Service (INBOUND_EMAIL_SERVICE)</label>
            </value>
            <value>
                <fullName>INVOCABLE_ACTION</fullName>
                <label>Invocable Action (INVOCABLE_ACTION)</label>
            </value>
            <value>
                <fullName>PLATFORM_EVENT_PUBLISH_CALLBACK</fullName>
                <label>Platform Event Publish Callback (PLATFORM_EVENT_PUBLISH_CALLBACK)</label>
            </value>
            <value>
                <fullName>POST_INSTALL_SCRIPT</fullName>
                <label>Managed Package Install/Upgrade (POST_INSTALL_SCRIPT)</label>
            </value>
            <value>
                <fullName>QUEUEABLE</fullName>
                <label>Queueable Operation (QUEUEABLE)</label>
            </value>
            <value>
                <fullName>QUICK_ACTION</fullName>
                <label>Quick Action (QUICK_ACTION)</label>
            </value>
            <value>
                <fullName>REMOTE_ACTION</fullName>
                <label>Remote Action (REMOTE_ACTION)</label>
            </value>
            <value>
                <fullName>REST</fullName>
                <label>RESTful Web Service (REST)</label>
            </value>
            <value>
                <fullName>RUNTEST_ASYNC</fullName>
                <label>Tests Running Asynchronously (RUNTEST_ASYNC)</label>
            </value>
            <value>
                <fullName>RUNTEST_DEPLOY</fullName>
                <label>Run During Deployment (RUNTEST_DEPLOY)</label>
            </value>
            <value>
                <fullName>RUNTEST_SYNC</fullName>
                <label>Tests Running Synchronously (RUNTEST_SYNC)</label>
            </value>
            <value>
                <fullName>SCHEDULED</fullName>
                <label>Scheduled Job (SCHEDULED)</label>
            </value>
            <value>
                <fullName>SOAP</fullName>
                <label>Apex SOAP Web Service (SOAP)</label>
            </value>
            <value>
                <fullName>SYNCHRONOUS</fullName>
                <label>Synchronous Operation (SYNCHRONOUS)</label>
            </value>
            <value>
                <fullName>TRANSACTION_FINALIZER_QUEUEABLE</fullName>
                <label>Queueable Job with Transaction Finalizers (TRANSACTION_FINALIZER_QUEUEABLE)</label>
            </value>
            <value>
                <fullName>VF</fullName>
                <label>Visualforce Page (VF)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>