src/modules/logger/objects/Log__c/fields/Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Id__c</fullName>
    <description>Salesforce Identifier for the Log record&apos;s linked record</description>
    <inlineHelpText>Salesforce Identifier for the Log record&apos;s linked record</inlineHelpText>
    <label>Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>