src/modules/logger/objects/Log__c/fields/Related_Records__c.field-meta.xml
<CustomField>
    <fullName>Related_Records__c</fullName>
    <description>A list of related record identifiers in JSON format</description>
    <inlineHelpText>A list of related record identifiers in JSON format</inlineHelpText>
    <label>Related Records</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>