src/modules/logger/objects/Log__c/fields/Request_Id__c.field-meta.xml
<CustomField>
    <fullName>Request_Id__c</fullName>
    <description>The unique ID of a single transaction.</description>
    <inlineHelpText>The unique ID of a single transaction. A transaction can contain one or more logs. Each log in a given transaction has the same Transaction Request ID.</inlineHelpText>
    <label>Transaction Request ID</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>