src/modules/logger/objects/Log__c/fields/Stack_Trace__c.field-meta.xml
<CustomField>
    <fullName>Stack_Trace__c</fullName>
    <description>Provides a detailed list of function calls and their sequence, showing the path of execution</description>
    <inlineHelpText>Provides a detailed list of function calls and their sequence, showing the path of execution</inlineHelpText>
    <label>Stack Trace</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>