src/modules/logger/objects/Log__c/fields/Trigger_New_Records__c.field-meta.xml
<CustomField>
    <fullName>Trigger_New_Records__c</fullName>
    <label>New Records</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>