src/modules/logger/objects/Log__c/fields/Trigger_Old_Records__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Old_Records__c</fullName>
    <label>Old Records</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>