src/modules/logger/objects/Log__c/fields/Trigger_Operation__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Operation__c</fullName>
    <description>Current Trigger operation</description>
    <inlineHelpText>Current Trigger operation</inlineHelpText>
    <label>Operation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BEFORE_INSERT</fullName>
                <label>Before Insert</label>
            </value>
            <value>
                <fullName>BEFORE_UPDATE</fullName>
                <label>Before Update</label>
            </value>
            <value>
                <fullName>BEFORE_DELETE</fullName>
                <label>Before Delete</label>
            </value>
            <value>
                <fullName>AFTER_INSERT</fullName>
                <label>After Insert</label>
            </value>
            <value>
                <fullName>AFTER_UPDATE</fullName>
                <label>After Update</label>
            </value>
            <value>
                <fullName>AFTER_DELETE</fullName>
                <label>After Delete</label>
            </value>
            <value>
                <fullName>AFTER UNDELETE</fullName>
                <label>After Undelete</label>
            </value>
            <value>
                <fullName>after-delete</fullName>
                <isActive>false</isActive>
                <label>after-delete</label>
            </value>
            <value>
                <fullName>after-insert</fullName>
                <isActive>false</isActive>
                <label>after-insert</label>
            </value>
            <value>
                <fullName>after-undelete</fullName>
                <isActive>false</isActive>
                <label>after-undelete</label>
            </value>
            <value>
                <fullName>after-update</fullName>
                <isActive>false</isActive>
                <label>after-update</label>
            </value>
            <value>
                <fullName>before-delete</fullName>
                <isActive>false</isActive>
                <label>before-delete</label>
            </value>
            <value>
                <fullName>before-insert</fullName>
                <isActive>false</isActive>
                <label>before-insert</label>
            </value>
            <value>
                <fullName>before-update</fullName>
                <isActive>false</isActive>
                <label>before-update</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>